-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# Internal Error (/oracle/valhalla/open/src/hotspot/share/ci/ciObjectFactory.cpp:244), pid=4325, tid=4353
# assert(Universe::heap()->is_in_reserved(key)) failed: must be
Current CompileTask:
C2: 768 31 b compiler.valhalla.valuetypes.TestBasicFunctionality::test11 (48 bytes)
Stack: [0x00007f01a019d000,0x00007f01a029e000], sp=0x00007f01a0296440, free space=997k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x196dbec] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
V [libjvm.so+0x196ea1f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xb906f2] report_vm_error(char const*, int, char const*, char const*, ...)+0x112
V [libjvm.so+0x9962fe] ciObjectFactory::get(oop)+0xee
V [libjvm.so+0x94f7aa] ciInstance::field_value_impl(BasicType, int)+0x95a
V [libjvm.so+0x9510d8] ciInstance::field_value(ciField*)+0x278
V [libjvm.so+0x191257b] ValueTypeBaseNode::load(PhaseGVN&, Node*&, Node*, Node*, Node*, ciInstanceKlass*, int)+0x28b
V [libjvm.so+0x19128a8] ValueTypeNode::make_from_oop(PhaseGVN&, Node*&, Node*, Node*, bool, bool)+0x148
V [libjvm.so+0x19137e0] ValueTypeNode::make_from_oop(GraphKit*, Node*, bool, bool)+0x100
V [libjvm.so+0x161debd] Parse::do_get_xxx(Node*, ciField*, bool)+0x5d
V [libjvm.so+0x1622121] Parse::do_field_access(bool, bool)+0xa41
V [libjvm.so+0x161aab8] Parse::do_one_bytecode()+0x1868
V [libjvm.so+0x160caa2] Parse::do_one_block()+0x372
V [libjvm.so+0x160d891] Parse::do_all_blocks()+0x1d1
V [libjvm.so+0x1610fff] Parse::Parse(JVMState*, ciMethod*, float)+0xc3f
V [libjvm.so+0x8dbd4c] ParseGenerator::generate(JVMState*)+0x1dc
V [libjvm.so+0x8dcdc7] LateInlineCallGenerator::do_late_inline()+0xd87
V [libjvm.so+0xae6d22] Compile::inline_incrementally_one(PhaseIterGVN&)+0x422
V [libjvm.so+0xaec1bf] Compile::inline_incrementally(PhaseIterGVN&)+0x13f
V [libjvm.so+0xaef589] Compile::Optimize()+0x3e9
V [libjvm.so+0xaf1610] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x12a0
V [libjvm.so+0x8d9142] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2f2
V [libjvm.so+0xafc329] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3a9
V [libjvm.so+0xafcf51] CompileBroker::compiler_thread_loop()+0x251
V [libjvm.so+0x189ea7e] JavaThread::thread_main_inner()+0x24e
V [libjvm.so+0x189ecf2] JavaThread::run()+0x1b2
V [libjvm.so+0x15a62ca] thread_native_entry(Thread*)+0xfa
C [libpthread.so.0+0x76ba] start_thread+0xca
# assert(Universe::heap()->is_in_reserved(key)) failed: must be
Current CompileTask:
C2: 768 31 b compiler.valhalla.valuetypes.TestBasicFunctionality::test11 (48 bytes)
Stack: [0x00007f01a019d000,0x00007f01a029e000], sp=0x00007f01a0296440, free space=997k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x196dbec] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
V [libjvm.so+0x196ea1f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xb906f2] report_vm_error(char const*, int, char const*, char const*, ...)+0x112
V [libjvm.so+0x9962fe] ciObjectFactory::get(oop)+0xee
V [libjvm.so+0x94f7aa] ciInstance::field_value_impl(BasicType, int)+0x95a
V [libjvm.so+0x9510d8] ciInstance::field_value(ciField*)+0x278
V [libjvm.so+0x191257b] ValueTypeBaseNode::load(PhaseGVN&, Node*&, Node*, Node*, Node*, ciInstanceKlass*, int)+0x28b
V [libjvm.so+0x19128a8] ValueTypeNode::make_from_oop(PhaseGVN&, Node*&, Node*, Node*, bool, bool)+0x148
V [libjvm.so+0x19137e0] ValueTypeNode::make_from_oop(GraphKit*, Node*, bool, bool)+0x100
V [libjvm.so+0x161debd] Parse::do_get_xxx(Node*, ciField*, bool)+0x5d
V [libjvm.so+0x1622121] Parse::do_field_access(bool, bool)+0xa41
V [libjvm.so+0x161aab8] Parse::do_one_bytecode()+0x1868
V [libjvm.so+0x160caa2] Parse::do_one_block()+0x372
V [libjvm.so+0x160d891] Parse::do_all_blocks()+0x1d1
V [libjvm.so+0x1610fff] Parse::Parse(JVMState*, ciMethod*, float)+0xc3f
V [libjvm.so+0x8dbd4c] ParseGenerator::generate(JVMState*)+0x1dc
V [libjvm.so+0x8dcdc7] LateInlineCallGenerator::do_late_inline()+0xd87
V [libjvm.so+0xae6d22] Compile::inline_incrementally_one(PhaseIterGVN&)+0x422
V [libjvm.so+0xaec1bf] Compile::inline_incrementally(PhaseIterGVN&)+0x13f
V [libjvm.so+0xaef589] Compile::Optimize()+0x3e9
V [libjvm.so+0xaf1610] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x12a0
V [libjvm.so+0x8d9142] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2f2
V [libjvm.so+0xafc329] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3a9
V [libjvm.so+0xafcf51] CompileBroker::compiler_thread_loop()+0x251
V [libjvm.so+0x189ea7e] JavaThread::thread_main_inner()+0x24e
V [libjvm.so+0x189ecf2] JavaThread::run()+0x1b2
V [libjvm.so+0x15a62ca] thread_native_entry(Thread*)+0xfa
C [libpthread.so.0+0x76ba] start_thread+0xca
- relates to
-
JDK-8185556 [MVT] C2 compiler support for non-flattened value type fields
-
- Resolved
-