8193123: [MVT] ciReplay does not support non-flattened value type fields

Reviewed-by: roland